--- a/wp-content/themes/MRT Lider/assets/scss/style.scss
+++ b/wp-content/themes/MRT Lider/assets/scss/style.scss
@@ -43,7 +43,7 @@ h6 {
 .wrapper {
     min-height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow-x: clip;
     z-index: 0;
 }
 .container {
